--- a/src/app/Marketing/qtnmfcl/qtnmfcl-list/qtnmfcl-list.component.html
+++ b/src/app/Marketing/qtnmfcl/qtnmfcl-list/qtnmfcl-list.component.html
@@ -1,13 +1,13 @@
 <div class="page-header">
   <h5>{{title}}</h5>
-  <button *ngIf="bAdd" class="btn btn-success btn-sm" routerLink="/marketing/qtnmEdit"
+  <button *ngIf="bAdd" class="btn btn-success btn-sm" routerLink="/marketing/qtnmfclEdit"
     [queryParams]="{id :0,mode:'add',menuid:menuid,type:type,  appid:appid}">New</button>
   <button class="btn btn-success btn-sm" (click)="return2Parent()">Return</button>
 </div>
 
 <div class="page-search">
-  <app-qtnm-search [search_url]="'/api/Marketing/Qtnmfcl/GetListAsync'" [input]="ms.getSearchRecord()"
-    (searchResult)="search($event)"></app-qtnm-search>
+  <app-qtnmfcl-search [search_url]="'/api/Marketing/Qtnmfcl/GetListAsync'" [input]="ms.getSearchRecord()"
+    (searchResult)="search($event)"></app-qtnmfcl-search>
 </div>
 
 <div class="page-pagination">
