--- a/src/app/marketing/qtnmair/qtnmaird-edit/qtnmaird-edit.component.html
+++ b/src/app/marketing/qtnmair/qtnmaird-edit/qtnmaird-edit.component.html
@@ -8,10 +8,10 @@
         <div class="col-sm-3">
           <auto-complete formControlName="qtnd_pol_code" id="qtnd_pol_code" (CallBack)="callBack($event)"
             [table]="'param'" [subtable]="'sea-port'" [company_id]="getCompanyId()" [url]="url"
-            display_column="[{'caption':'code','value':'param_code'},{'caption':'name','value':'param_name'}]"></auto-complete>
+            display_column="[{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]" required></auto-complete>
         </div>
         <div class="col-sm-5">
-          <app-input maxlength="100" formControlName="qtnd_pol_name" [case]="'UPPER'"></app-input>
+          <app-input maxlength="100" formControlName="qtnd_pol_name" [case]="'UPPER'" required></app-input>
         </div>
       </div>
 
@@ -20,10 +20,10 @@
         <div class="col-sm-3">
           <auto-complete formControlName="qtnd_pod_code" id="qtnd_pod_code" (CallBack)="callBack($event)"
             [table]="'param'" [subtable]="'sea-port'" [company_id]="getCompanyId()" [url]="url"
-            display_column="[{'caption':'code','value':'param_code'},{'caption':'name','value':'param_name'}]"></auto-complete>
+            display_column="[{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]" required></auto-complete>
         </div>
         <div class="col-sm-5">
-          <app-input maxlength="100" formControlName="qtnd_pod_name" [case]="'UPPER'"></app-input>
+          <app-input maxlength="100" formControlName="qtnd_pod_name" [case]="'UPPER'" required></app-input>
         </div>
       </div>
 
@@ -32,10 +32,10 @@
         <div class="col-sm-3">
           <auto-complete formControlName="qtnd_carrier_code" id="qtnd_carrier_code" (CallBack)="callBack($event)"
             [table]="'param'" [subtable]="'air carrier'" [company_id]="getCompanyId()" [url]="url"
-            display_column="[{'caption':'code','value':'param_code'},{'caption':'name','value':'param_name'}]"></auto-complete>
+            display_column="[{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]" required></auto-complete>
         </div>
         <div class="col-sm-5">
-          <app-input maxlength="100" formControlName="qtnd_carrier_name" [case]="'UPPER'"></app-input>
+          <app-input maxlength="100" formControlName="qtnd_carrier_name" [case]="'UPPER'" required></app-input>
         </div>
       </div>
       <div class="form-group row">
@@ -143,10 +143,8 @@
               <div class="form-group row">
                 <label class="col-sm-4 form-label form-label-sm" for=""></label>
                 <div class="col-sm-8">
-                  <button class="btn btn-sm btn-success me-3" [disabled]="mform.invalid" (click)="search('search')">{{
-                    mode
-                    ==='new'? 'Add' : 'Edit' }}</button>
-                  <button class="btn btn-sm btn-success" (click)="newRecord()">Clear</button>
+                  <button class="btn btn-sm btn-success me-3" [disabled]="mform.invalid" (click)="search('search')">{{mode ==='new'? 'Add' : 'Update' }}</button>
+                  <button class="btn btn-sm btn-success" (click)="newRecord()">New</button>
                 </div>
               </div>
             </div>
@@ -154,82 +152,5 @@
         </div>
       </div>
     </div>
-
-    <!-- <div class="col-sm-3">
-        <div class="form-group row">
-          <label class="col-sm-4 form-label form-lable-sm" for="">Minimum</label>
-          <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="qtnd_min" [case]="'UPPER'"></app-input>
-          </div>
-        </div>
-        <div class="form-group row">
-          <label class="col-sm-4 form-label form-lable-sm" for="">+45K</label>
-          <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="qtnd_45k" [case]="'UPPER'"></app-input>
-          </div>
-        </div>
-        <div class="form-group row">
-          <label class="col-sm-4 form-label form-lable-sm" for="">+100K</label>
-          <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="qtnd_100k" [case]="'UPPER'"></app-input>
-          </div>
-        </div>
-        <div class="form-group row">
-          <label class="col-sm-4 form-label form-lable-sm" for="">+300K</label>
-          <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="qtnd_300k" [case]="'UPPER'"></app-input>
-          </div>
-        </div>
-        <div class="form-group row">
-          <label class="col-sm-4 form-label form-lable-sm" for="">+500K</label>
-          <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="qtnd_500k" [case]="'UPPER'"></app-input>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-sm-3">
-        <div class="form-group row">
-          <label class="col-sm-4 form-label form-lable-sm" for="">+1000K</label>
-          <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="qtnd_1000k" [case]="'UPPER'"></app-input>
-          </div>
-        </div>
-        <div class="form-group row">
-          <label class="col-sm-4 form-label form-lable-sm" for="">FSC</label>
-          <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="qtnd_fsc" [case]="'UPPER'"></app-input>
-          </div>
-        </div>
-        <div class="form-group row">
-          <label class="col-sm-4 form-label form-lable-sm" for="">WAR</label>
-          <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="qtnd_war" [case]="'UPPER'"></app-input>
-          </div>
-        </div>
-        <div class="form-group row">
-          <label class="col-sm-4 form-label form-lable-sm" for="">SFC</label>
-          <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="qtnd_sfc" [case]="'UPPER'"></app-input>
-          </div>
-        </div>
-        <div class="form-group row">
-          <label class="col-sm-4 form-label form-lable-sm" for="">HAC</label>
-          <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="qtnd_hac" [case]="'UPPER'"></app-input>
-          </div>
-        </div>
-      
-        <div style="height: 5px;"></div>
-        <div class="form-group row">
-          <label class="col-sm-4 form-label form-label-sm" for=""></label>
-          <div class="col-sm-8">
-            <button class="btn btn-sm btn-success me-3" [disabled]="mform.invalid" (click)="search('search')">{{ mode
-              ==='new'? 'Add' : 'Edit' }}</button>
-            <button class="btn btn-sm btn-success" (click)="newRecord()">Clear</button>
-          </div>
-        </div>
-      </div> -->
-
   </div>
 </form>
