--- a/src/app/Marketing/qtnmfcl/qtndfcl-edit/qtndfcl-edit.component.html
+++ b/src/app/Marketing/qtnmfcl/qtndfcl-edit/qtndfcl-edit.component.html
@@ -5,7 +5,7 @@
         <div class="form-group row">
           <label class="col-sm-4 form-label form-label-sm" for="">POL</label>
           <div class="col-sm-3">
-            <auto-complete formControlName="qtnd_pol_code" name="qtnd_pol_name" id="qtnd_pol_name"
+            <auto-complete formControlName="qtnd_pol_code" name="qtnd_pol_code" id="qtnd_pol_code"
               (CallBack)="callBack($event)" table="param" subtable="sea-port" [company_id]="getCompanyId()" [url]="url"
               case="upper"
               display_column="[{'caption':'ID','value':'param_id'},{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]">
@@ -18,7 +18,7 @@
         <div class="form-group row">
           <label class="col-sm-4 form-label form-label-sm" for="">POD</label>
           <div class="col-sm-3">
-            <auto-complete formControlName="qtnd_pod_code" name="qtnd_pod_name" id="qtnd_pod_name"
+            <auto-complete formControlName="qtnd_pod_code" name="qtnd_pod_code" id="qtnd_pod_code"
               (CallBack)="callBack($event)" table="param" subtable="sea-port" [company_id]="getCompanyId()" [url]="url"
               case="upper"
               display_column="[{'caption':'ID','value':'param_id'},{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]">
@@ -31,7 +31,7 @@
         <div class="form-group row">
           <label class="col-sm-4 form-label form-label-sm" for="">CARRIER</label>
           <div class="col-sm-3">
-            <auto-complete formControlName="qtnd_carrier_code" name="qtnd_carrier_name" id="qtnd_carrier_name"
+            <auto-complete formControlName="qtnd_carrier_code" name="qtnd_carrier_code" id="qtnd_carrier_code"
               (CallBack)="callBack($event)" table="param" subtable="SEA CARRIER" [company_id]="getCompanyId()"
               [url]="url" case="upper"
               display_column="[{'caption':'ID','value':'param_id'},{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]">
